--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,4 +10,4 @@ jobs:
     - name: Build Docker image
       run: docker build -t creditcard/image .
     - name: Run Docker image
-      run: docker run --rm -it -p 8080:8080 -v "`pwd`/../src:/src" -v "`pwd`/../data:/data" -w /src docker.io/creditcard/image
+      run: docker run --rm -p 8080:8080 -v "`pwd`/../src:/src" -v "`pwd`/../data:/data" -w /src docker.io/creditcard/image
