--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,7 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - uses: .
+      with:
+        args: test
     - name: Build Docker image
       run: docker build -t creditcard/image .
     - name: Run Docker image
       run: docker run --rm -p 8080:8080 -v "`pwd`/../src:/src" -v "`pwd`/../data:/data" -w /src docker.io/creditcard/image
+
